--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
+<script>
+// === 1. Persistent TEXT editing with spellcheck disabled ===
+function makeTextEditableAndPersistent(element, path = '') {
+  element.childNodes.forEach((node, i) => {
+    const newPath = `${path}/${i}`;
 
+    if (node.nodeType === Node.TEXT_NODE && node.textContent.trim() !== '') {
+      const span = document.createElement('span');
+      span.textContent = node.textContent;
+      span.contentEditable = true;
+      span.spellcheck = false;
+      span.dataset.path = newPath;
+      span.style.outline = 'none';
+      span.style.border = 'none';
+      span.style.display = 'inline';
+
+      const savedText = localStorage.getItem(`text${newPath}`);
+      if (savedText !== null) span.textContent = savedText;
+
+      span.addEventListener('input', () => {
+        localStorage.setItem(`text${newPath}`, span.textContent);
+      });
+
+      node.parentNode.replaceChild(span, node);
+    } else if (node.nodeType === Node.ELEMENT_NODE) {
+      makeTextEditableAndPersistent(node, newPath);
+    }
+  });
+}
+makeTextEditableAndPersistent(document.body);
+
+// === 2. Disable all hyperlinks ===
+document.querySelectorAll('a').forEach(link => {
+  link.href = 'javascript:void(0)';
+  link.addEventListener('click', e => e.preventDefault());
+  link.addEventListener('contextmenu', e => e.preventDefault());
+});
+
+// === 3. Replace images + persist them ===
+document.querySelectorAll('img').forEach((img, index) => {
+  const key = `img${index}`;
+  const savedSrc = localStorage.getItem(key);
+  if (savedSrc) img.src = savedSrc;
+
+  img.addEventListener('contextmenu', e => {
+    e.preventDefault();
+    const fileInput = document.createElement('input');
+    fileInput.type = 'file';
+    fileInput.accept = 'image/*';
+    fileInput.style.display = 'none';
+
+    fileInput.addEventListener('change', event => {
+      const file = event.target.files[0];
+      if (!file) return;
+
+      const reader = new FileReader();
+      reader.onload = function(evt) {
+        img.src = evt.target.result;
+        localStorage.setItem(key, evt.target.result);
+      };
+      reader.readAsDataURL(file);
+    });
+
+    document.body.appendChild(fileInput);
+    fileInput.click();
+    fileInput.remove();
+  });
+});
+
+// === 4. Toggle verified badge inside editable span using Ctrl+` ===
+document.addEventListener('keydown', e => {
+  if (e.ctrlKey && e.key === '`') {
+    const selection = window.getSelection();
+    if (!selection.rangeCount) return;
+
+    const range = selection.getRangeAt(0);
+    const selectedNode = range.startContainer.parentNode;
+
+    if (!selectedNode.isContentEditable) return;
+
+    const badgeClass = 'inline-verified-badge';
+    const existingBadge = selectedNode.querySelector(`.${badgeClass}`);
+
+    if (existingBadge) {
+      existingBadge.remove(); // Toggle off
+    } else {
+      const badgeSpan = document.createElement('span');
+      badgeSpan.className = badgeClass;
+      badgeSpan.contentEditable = false;
+      badgeSpan.style.display = 'inline-block';
+      badgeSpan.style.verticalAlign = 'middle';
+      badgeSpan.style.marginLeft = '4px';
+      badgeSpan.innerHTML = `
+        <img style="height: 16px;" src="data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='28' viewBox='0 0 28 28' fill='none'%3E%3Cg clip-path='url(%23clip0_8_46)'%3E%3Crect x='5.88818' width='22.89' height='22.89' transform='rotate(15 5.88818 0)' fill='%230066FF'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M20.543 8.7508L20.549 8.7568C21.15 9.3578 21.15 10.3318 20.549 10.9328L11.817 19.6648L7.45 15.2968C6.85 14.6958 6.85 13.7218 7.45 13.1218L7.457 13.1148C8.058 12.5138 9.031 12.5138 9.633 13.1148L11.817 15.2998L18.367 8.7508C18.968 8.1498 19.942 8.1498 20.543 8.7508Z' fill='white'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_8_46'%3E%3Crect width='28' height='28' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E"
+          alt="Verified Badge Icon" title="Verified Badge Icon">
+      `;
+      selectedNode.appendChild(badgeSpan);
+    }
+  }
+});
+</script>
